--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-
-<head>
-</head>
-
-<body>
-  <p>Hello World</p>
-</body>
+<html>
+<head></head>
+<body><p>Hello World!</p></body>
+</html>
